fixing column gap

--- a/css/InterestPage.css
+++ b/css/InterestPage.css
@@ -15,6 +15,5 @@ body {
 }
 ul {
   columns: 3;
-  -webkit-columns: 3;
-  -moz-columns: 3;
+  column-gap: 35px;
 }
